tests/miniJava/neg/001595_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new while java ( ) ; } }
